<resources>
    <string name="app_name">safe travels</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="send_alert">Send Alert</string>
    <string name="contacts">Contacts</string>
    <string name="edit_contacts_text">Add Emergency Contacts</string>
    <string name="view_contacts_text">View Emergency Contacts</string>
    <string name="add_contact_text">Add Contact</string>
    <string name="edit_notification_text">Edit Notification Settings</string>
    <string name="notifications_text">Notifications</string>
    <string name="menu_icon">menu icon</string>
    <string name="header_logo_description">header logo</string>
    <string name="home_text">Home</string>
    <string name="map_text">Map</string>
    <string name="save_text">Save</string>
    <string name="toggleButtonOn">Start Route</string>
    <string name="toggleButtonOff">End Route</string>
    <string name="emergencyCallButton">Emergency Call</string>
    <string name="delete_text">Remove Contacts</string>
</resources>