<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsActivity">

    <!--title-->
    <TextView
        android:id="@+id/contacts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/contacts"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--subtitle-->
    <TextView
        android:id="@+id/editEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/edit_contacts_text"
        android:textColor="@color/textcolour"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--input name, number-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addContact"
            android:layout_height="wrap_content"
            android:layout_width="200dp"/>

        <!--submit-->
        <Button
            android:id="@+id/subContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />

    </LinearLayout>

    <!--emergency button-->
    <Button
        android:id="@+id/random_button"
        android:layout_width="153dp"
        android:layout_height="56dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/send_alert"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/alertButton"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>