<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NotificationsActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/mainToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/header_logo"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="25dp"
                    android:contentDescription="@string/header_logo_description"
                    app:layout_constraintBottom_toBottomOf="@+id/mainToolbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.42"
                    app:layout_constraintStart_toStartOf="@+id/mainToolbar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/safetravelslogo" />

                <TextView
                    android:id="@+id/toolbar_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/header_logo"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/menu_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="25dp"
                    android:clickable="true"
                    android:contentDescription="@string/menu_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_menu_24"
                    app:tint="@android:color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="152dp" />
        <!--title-->
        <TextView
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="85dp"
            android:text="@string/notifications_text"
            android:textColor="@color/textcolour"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--subtitle-->
        <TextView
            android:id="@+id/edit_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/edit_notification_text"
            android:textColor="@color/textcolour"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifications" />

        <!--timer length-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timer"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_notifications" />

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:text="timer length"
            app:layout_constraintStart_toEndOf="@+id/notification1"
            app:layout_constraintTop_toBottomOf="@+id/edit_notifications" />

        <!--route deviation-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dist"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="132dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_notifications" />

        <TextView
            android:id="@+id/textViewDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="140dp"
            android:text="route deviation"
            app:layout_constraintStart_toEndOf="@+id/notification1"
            app:layout_constraintTop_toBottomOf="@+id/edit_notifications" />

        <!--submit-->
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:text="Save"
            app:layout_constraintStart_toStartOf="@+id/notification1"
            app:layout_constraintTop_toBottomOf="@+id/edit_notifications"
            tools:layout_editor_absoluteX="27dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.drawerlayout.widget.DrawerLayout>