<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:id="@+id/dashboard"
        tools:openDrawer="start"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/mainToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    map:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    map:layout_constraintEnd_toEndOf="parent"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/header_logo"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="25dp"
                    android:contentDescription="@string/header_logo_description"
                    map:layout_constraintBottom_toBottomOf="@+id/mainToolbar"
                    map:layout_constraintEnd_toEndOf="parent"
                    map:layout_constraintHorizontal_bias="0.42"
                    map:layout_constraintStart_toStartOf="@+id/mainToolbar"
                    map:layout_constraintTop_toTopOf="parent"
                    map:srcCompat="@drawable/safetravelslogo" />

                <TextView
                    android:id="@+id/toolbar_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    map:layout_constraintBottom_toBottomOf="parent"
                    map:layout_constraintStart_toEndOf="@+id/header_logo"
                    map:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="25dp"
                    android:contentDescription="@string/menu_icon"
                    map:layout_constraintBottom_toBottomOf="parent"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toTopOf="parent"
                    map:srcCompat="@drawable/ic_baseline_menu_24"
                    map:tint="@android:color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintHorizontal_bias="0.0"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintVertical_bias="0.0"
            tools:context=".MapsActivity"
            tools:layout="@layout/activity_main" />

        <Button
            android:id="@+id/random_button"
            android:layout_width="153dp"
            android:layout_height="56dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/send_alert"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            map:backgroundTint="@color/alertButton"
            map:cornerRadius="20dp"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.drawerlayout.widget.DrawerLayout>
